[package]
name = "flou"
description = "Parser for Flou, a flowchart description language."
homepage = "https://asha20.github.io/flou"
repository = "https://github.com/Asha20/flou"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["flowchart"]

version = "0.1.0"
edition = "2018"

[dependencies]
nom = "7.0.0"
nom-supreme = "0.6.0"
num-traits = "0.2.14"

[dev-dependencies]
pretty_assertions = "1.0.0"
